smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/space-after-metadata-quoted.smithy
// Syntax error at line 3, column 9: Expected SPACE(' ') but found STRING('"foo"') | Model
$version: "2.0"
metadata"foo"="bar"
